    - Displays a player's town's board message.
  - New Placeholder: %townyadvanced_nation_board%
    - Displays a player's nation's board message.
  - New Placeholder: %townyadvanced_player_location_town_board%
    - Displays the board message of the town where the player is stood.
  - New Placeholder: %townyadvanced_player_location_nation_board%
    - Displays the board message of the nation where the player is stood.
  - Add spawn protection for players who've just died.
  - New Config Node: global_town_settings.respawn_protection
    - Default; 10s
    - When greater than 0s, the amount of time a player who has respawned is considered invulnerable.
    - Invulnerable players who attacker other players will lose their invulnerability.
    - Invulnerable players who teleport after respawn will also lose their invulnerability.
  - Bump language files to 0.125.
  - Prevent spam if a player's locale is invalid, courtesy of Warriorrrr with PR #5314.
  - Improve startup logging/initialization, courtesy of Articdive & LlmDl with PR #5299.
0.97.2.2:
  - Fix Citizens NPCs causing error on PlayerTeleportEvent, courtesy of Articdive with PR #5319.
0.97.2.3:
  - Change PlayerCacheUtil to once again check for a fakeplayer resident.
  - Fix PlayerCacheUtil preventing plot permissions from working properly. 
  - Fix missing command feedback on many /tw toggle commands.
0.97.2.4:
  - Fix Global messages stripping their colour.
  - Remove old Outpost checking code and references to Articdive which were not spelled correct, courtesy of Articdive with PR #5324.
  - Add a size limit for the town_block_ratio option, courtesy of Warriorrrr with PR #5326.
  - New Config Option: town.town_block_limit
    - Default: 0
    - The maximimum amount of townblocks a town can have, if town_block_ratio is 0 the max size will be decided by the town_levels. 
    - Set to 0 to have no size limit.
  - Fix automatic renaming of invalid and duplicate town and nation names failing some of the time.